[tool.poetry]
name = "study-gdrl"
version = "0.1.0"
description = ""
authors = ["Akin, Nicholas <nicholasakin@gmail.com>"]
readme = "README.md"

packages = [ {include = "bandit_walk", from = "src/chpt_2"},
            {include = "bandit_slippery_walk", from = "src/chpt_2"},
            {include = "frozen_lake", from = "src/chpt_2"}]

[tool.poetry.dependencies]
python = "^3.13"
numpy = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
